# plain_and_cipher_mat_mul

./: README.md
data/Iris/: features.txt  model.txt  model_prior.txt
data/WBC/: features.txt  model.txt  x_test.txt
data/result/: result_Jiang_WBC.txt  result_Jiangs_iris.txt  result_our_WBC.txt
src/: helper.h  matrix.h  plain_and_cipher_mat_mul.h  utils.h
test/: CMakeLists.txt  plain_and_cipher_mat_mul.cpp
